--- a/public/css/app.css
+++ b/public/css/app.css
@@ -688,6 +688,92 @@ body {
   margin-top: 2vh;
 }
 
+.user-picker-container .matched-couple {
+  width: 100%;
+  height: 100%;
+  display: none;
+  background: linear-gradient(90deg, transparent 0%, rgba(223, 71, 35, 0.4) 70%, transparent 100%);
+  text-align: center;
+}
+
+.user-picker-container .matched-couple .matched-couple-header {
+  width: calc(90% - 20px);
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 2.9em;
+  font-family: "Bebas Neue",sans-serif;
+}
+
+.user-picker-container .matched-couple .matched-info {
+  width: calc(80% - 20px);
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.8em;
+  letter-spacing: 0.04em;
+  margin-bottom: 20vh;
+}
+
+.user-picker-container .matched-couple .buttons-container {
+  width: calc(90% - 10px);
+  padding: 5px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.user-picker-container .matched-couple .buttons-container .matched-section-btn {
+  padding: 10px 20px;
+  margin: 0px 5px;
+  border-radius: 10px;
+  border: none;
+  background: rgba(255, 255, 255, 0.4);
+  font-size: 1.4em;
+  font-family: "Bebas Neue",sans-serif;
+  cursor: pointer;
+  transition: filter 0.4s;
+}
+
+.user-picker-container .matched-couple .buttons-container .matched-section-btn:hover {
+  filter: brightness(70%);
+}
+
+.error-content,
+.missing-matches,
+.user-matches {
+  width: calc(50% - 20px);
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 1.9em;
+  font-family: "Bebas Neue",sans-serif;
+  letter-spacing: 0.04em;
+  background: linear-gradient(90deg, transparent 0%, rgba(223, 71, 35, 0.4) 70%, transparent 100%);
+}
+
+.missing-matches,
+.user-matches {
+  width: calc(90% - 20px);
+}
+
+.matches-advice {
+  width: calc(60% - 20px);
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 1.4em;
+  font-family: "Bebas Neue",sans-serif;
+  margin-top: 4vh;
+}
+
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
