--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -11,12 +11,11 @@ a{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    display: block;
     .main-nav{
         padding: 20px 0px;
         background: linear-gradient(90deg,rgba(255,101,91,1) 0%,rgba(253,41,123,0.9783263647255778) 35%, rgba(9,9,121,1) 70%),
         linear-gradient(45deg,rgba(255,101,91,1) 0%,rgba(0,3,80,1) 60%);
-        .main-nav-elems,.dropdown-elem > .dropdown-toggle{
+        .main-nav-elems,.dropdown-open-mode,.dropdown-elem > .dropdown-toggle{
             color: black;
             display: inline-block;
             padding: 5px 20px;
@@ -51,9 +50,6 @@ a{
         .main-nav-elems:hover{
             background: rgba(255,255,255,.9);
         }
-        .edit-elem,.logout-elem,.dropdown-elem{
-            float: right;
-        }
         .dropdown-elem{
             border: none;
             background: none;
@@ -74,6 +70,113 @@ a{
                 }
                 .dropdown-item:hover{
                     background: rgba(1,1,1,.4);
+                }
+            }
+        }
+        .dropdown-open-mode{
+            width: 2em;
+            border: 1px solid black;
+            border-radius: 20%;
+            display: none;
+            font-size: 1.9em;
+            text-align: center;
+            padding: 10px;
+            cursor: pointer;
+            float: right;
+            div{
+                width: 1em;
+                height: 0.09em;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                background: black;
+                margin-bottom: 4px;
+            }
+        }
+        .settings-container{
+            display: inline-block;
+            float: right;
+        }
+    }
+}
+
+@media screen and (max-width: 903px){
+    .main-navbar > .main-nav 
+    {
+        .main-nav-elems,.dropdown-elem{
+            display: none;
+        }
+        .main-logo,.dropdown-open-mode{
+            display: inline-block;
+        }
+        .main-logo{
+            width: calc(40% - 10px);
+        }
+    }
+
+    .main-navbar-extended{
+        position: fixed;
+        top: 0;
+        z-index: 5;
+        .main-nav{
+            height: 70vh;
+            .main-nav-elems,.dropdown-elem > .dropdown-toggle{
+                width: calc(80% - 40px);
+                display: block;
+                margin: 5px auto;
+                text-align: center;
+            }
+            .logout-elem,.edit-elem{
+                float: none;
+            }
+            .dropdown-elem,.settings-container{
+                float: none;
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .settings-container{
+                width: 100%;
+            }
+            .dropdown-elem{
+                .dropdown-menu{
+                    background: none;
+                    width: 90% !important;
+                    left: 5% !important;
+                    .dropdown-item{
+                        color: white;
+                        transition: background 0.3s;
+                        border: 1px solid black;
+                        border-radius: 10px;
+                        margin-bottom: 5px;
+                        padding: 10px 0px;
+                        font-size: 1.6em;
+                    }
+                    .dropdown-item:hover{
+                        background: rgba(1,1,1,.4);
+                    }
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 497px){
+    .main-navbar-extended{
+        .main-nav{
+            .main-logo{
+                width: calc(60% - 20px);
+            }
+        }
+    }
+}
+@media screen and (max-width: 347px){
+    .main-navbar-extended{
+        .main-nav{
+            .dropdown-open-mode{
+                width: 1.4em;
+                height: 1.4em;
+                div{
+                    width: 0.7em;
                 }
             }
         }
