--- a/resources/sass/_welcome.scss
+++ b/resources/sass/_welcome.scss
@@ -3,10 +3,10 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 100%;
-    position: fixed;
-    background: url("./public/img/backgrounds/background2.jpg");
-    /*image from https://freeimages.com */
+    height: calc(100vh - 40px);
+    padding-top: 40px;
+    position: relative;
+    top: 0px;
     background-size: cover;
     .short-describe{
         width: calc(80% - 20px);
@@ -18,7 +18,6 @@
         font-size: 3.9em;
         font-family: "Bebas Neue",sans-serif;
         transform: rotate(-5deg);
-        margin-top: 40px;
         color: white;
         text-shadow: 1px 1px #111;
         margin-bottom: 140px;
@@ -38,5 +37,35 @@
     }
     .welcome-register-button:hover{
         background: rgba(255,255,255,.2);
+    }
+}
+@media screen and (max-width: 979px){
+    .pierogi-background-and-describe{
+        .short-describe{
+            font-size: 3.1em;
+        }
+    }
+}
+@media screen and (max-width: 749px){
+    .pierogi-background-and-describe{
+        .short-describe{
+            font-size: 2.5em;
+        }
+    }
+}
+@media screen and (max-width: 749px){
+    .pierogi-background-and-describe{
+        .short-describe{
+            font-size: 2.4em;
+            margin-bottom: 90px;
+        }
+    }
+}
+@media screen and (max-width: 414px){
+    .pierogi-background-and-describe{
+        .short-describe{
+            font-size: 2.1em;
+            margin-bottom: 90px;
+        }
     }
 }
