--- a/resources/sass/user/_gallery.scss
+++ b/resources/sass/user/_gallery.scss
@@ -24,3 +24,49 @@
     font-family: "Bebas Neue",sans-serif;
     margin-top: 4vh;
 }
+.lovers-container{
+    width: calc(90% - 20px);
+    padding: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    a{
+        text-decoration: none;
+        color: black;
+    }
+}
+.lover-widget{
+    display: inline-block;
+    width: 200px;
+    height: 200px;
+    background-size: cover !important;
+    border-radius: 50%;
+    margin: 5px;
+    cursor: pointer;
+    transition: all 0.4s;
+    .main-data-label{
+        width: calc(100% - 10px);
+        padding: 5px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        font-size: 1.9em;
+        font-family: "Bebas Neue",sans-serif;
+        background: white;
+        position: relative;
+        top: calc(100% - 2.1em);
+        transition: opacity 0.2s;
+        opacity: 0;
+        cursor: pointer;
+        color: black;
+    }
+}
+.lover-widget:hover{
+    border-radius: 0;
+    filter: brightness(70%);
+    .main-data-label{
+        opacity: 1;
+    }
+}
