--- a/resources/sass/user/_userPicker.scss
+++ b/resources/sass/user/_userPicker.scss
@@ -51,7 +51,7 @@
         width: 60%;
         border-radius: 10px 0px 0px 10px;
         background-size: cover !important;
-        background-position: center;
+        background-position: center !important;
         .decision-panel{
             width: calc(90% - 20px);
             padding: 10px;
@@ -59,7 +59,7 @@
             margin-left: auto;
             margin-right: auto;
             text-align: center;
-            margin-top: 70%;
+            margin-top: 56vh;
             .panel-btn{
                 width: 50px;
                 height: 50px;
@@ -174,6 +174,107 @@
             }
             .matched-section-btn:hover{
                 filter: brightness(70%);
+            }
+        }
+    }
+}
+@media screen and (max-width: 1541px){
+    .user-picker-container{
+        .info-section{
+            .pierogi-section{
+                .fav-pierogi-elem{
+                    font-size: 1.1em;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 1279px){
+    .user-picker-container{
+        width: calc(90% - 20px);
+    }
+}
+@media screen and (max-width: 1000px){
+    .user-picker-container{
+        width: calc(95% - 20px);
+        .info-section{
+            .name-and-age{
+                font-size: 2.1em;
+                margin-bottom: 4vh;
+            }
+            .pierogi-section{
+                .fav-pierogi-elem{
+                    display: block;
+                    width: calc(90% - 20px);
+                    margin-left: auto;
+                    margin-right: auto;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 647px){
+    .user-picker-container{
+        height: 90vh;
+        .photo-section,.info-section{
+            width: 100%;
+            border-radius: 10px;
+        }
+        .photo-section{
+            .decision-panel{
+                margin-top: 2vh;
+            }
+        }
+        .info-section{
+            height: 33vh;
+            position: relative;
+            top: -33vh;
+            border-radius: 0px 0px 10px 10px;
+            .name-and-age{
+                margin-bottom: 2vh;
+            }
+            .pierogi-section{
+                .fav-pierogi-elem{
+                    display: inline-block;
+                    width: calc(50% - 20px);
+                    margin-left: 5px;
+                    margin-right: 5px;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 592px){
+    .user-picker-container{
+        .matched-couple{
+            .matched-couple-header{
+                font-size: 2.4em;
+            }
+            .matched-info{
+                font-size: 1.4em;
+            }
+        }
+    }
+}
+@media screen and (max-width: 411px){
+    .user-picker-container{
+        width: calc(100% - 20px);
+        .info-section{
+            .pierogi-section{
+                .fav-pierogi-elem{
+                    font-size: 0.9em;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 350px){
+    .user-picker-container{
+        .info-section{
+            .pierogi-section{
+                .fav-pierogi-elem{
+                    font-size: 0.7em;
+                }
             }
         }
     }
