--- a/resources/sass/user/_dataForm.scss
+++ b/resources/sass/user/_dataForm.scss
@@ -95,3 +95,71 @@
         }
     }
 }
+@media screen and (max-width: 1293px){
+    .data-form-wrapper{
+        .pierogi-section{
+            width: calc(95% - 20px);
+        }
+    }
+}
+@media screen and (max-width: 1087px){
+    .data-form-wrapper{
+        .pierogi-section{
+            .pierogi-buttons{
+                .pierogi-classic-btn{
+                    font-size: 0.9em;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 1087px){
+    .data-form-wrapper{
+        .pierogi-section{
+            .pierogi-buttons{
+                .pierogi-classic-btn{
+                    width: calc(50% - 20px);
+                    font-size: 1.02em;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 858px){
+    .data-form-wrapper{
+        width: calc(80% - 20px);
+        .data-formInput{
+            width: calc(80% - 20px);
+        }
+    }
+}
+@media screen and (max-width: 681px){
+    .data-form-wrapper{
+        .data-formNumberInput{
+            width: calc(45% - 20px);
+        }
+        .pierogi-section{
+            width: calc(100% - 10px);
+            padding: 5px;
+            .pierogi-buttons{
+                .pierogi-classic-btn{
+                    width: calc(100% - 20px);
+                    font-size: 0.9em;
+                }
+            }
+        }
+    }
+}
+@media screen and (max-width: 430px){
+    .data-form-wrapper{
+        width: calc(95% - 20px);
+        .data-formInput{
+            width: calc(95% - 20px);
+        }
+        .pierogi-section{
+            .pierogi-section-header{
+                font-size: 1.5em;
+            }
+        }
+    }
+}
