Chat system part 1: design and RWD done

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1133,6 +1133,173 @@ body {
   opacity: 1;
 }
 
+@media screen and (max-width: 779px) {
+  .lover-widget {
+    width: 150px;
+    height: 150px;
+  }
+
+  .lover-widget .main-data-label {
+    font-size: 1.5em;
+    top: calc(100% - 2.6em);
+  }
+}
+
+.chat-container {
+  width: calc(60% - 20px);
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  height: 80vh;
+  background: rgba(80, 5, 94, 0.6);
+  margin-top: 1vh;
+  border-radius: 10px;
+}
+
+.chat-container .chat-history {
+  width: calc(100% - 10px);
+  padding: 5px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  height: 80%;
+  background: white;
+  border-radius: 10px;
+  margin-bottom: 1vh;
+}
+
+.chat-container .chat-form {
+  width: calc(90% - 20px);
+  padding: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.chat-container .chat-form .chat-form-input,
+.chat-container .chat-form .chat-form-submit {
+  vertical-align: top;
+  display: inline-block;
+  margin: 0px 5px;
+  font-size: 1.9em;
+  font-family: "Bebas Neue",sans-serif;
+  padding: 5px;
+  border: none;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.chat-container .chat-form .chat-form-input {
+  width: calc(70% - 10px);
+  border-radius: 10px;
+  text-indent: 0.5em;
+}
+
+.chat-container .chat-form ::-moz-placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.chat-container .chat-form :-ms-input-placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.chat-container .chat-form ::placeholder {
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.chat-container .chat-form .chat-form-submit {
+  border-radius: 20px;
+  width: calc(1.9em + 10px);
+  transition: filter 0.4s;
+}
+
+.chat-container .chat-form .chat-form-submit:hover {
+  filter: brightness(150%);
+}
+
+.chat-container .chat-form .chat-form-submit:focus {
+  outline: none;
+}
+
+@media screen and (max-width: 802px) {
+  .chat-container {
+    width: calc(80% - 20px);
+  }
+
+  .chat-container .chat-form .chat-form-input,
+  .chat-container .chat-form .chat-form-submit {
+    font-size: 1.5em;
+  }
+
+  .chat-container .chat-form .chat-form-input {
+    width: calc(80% - 10px);
+  }
+
+  .chat-container .chat-form .chat-form-submit {
+    width: calc(1.5em + 10px);
+  }
+}
+
+@media screen and (max-width: 519px) {
+  .chat-container {
+    width: calc(95% - 20px);
+  }
+
+  .chat-container .chat-form {
+    width: calc(100% - 20px);
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .chat-container {
+    width: calc(100% - 20px);
+  }
+
+  .chat-container .chat-form {
+    width: calc(100% - 20px);
+  }
+
+  .chat-container .chat-form .chat-form-input,
+  .chat-container .chat-form .chat-form-submit {
+    font-size: 1.2em;
+  }
+
+  .chat-container .chat-form .chat-form-submit {
+    width: calc(1.2em + 10px);
+  }
+}
+
+@media screen and (max-width: 290px) {
+  .chat-container {
+    width: calc(100% - 20px);
+    height: 81vh;
+  }
+
+  .chat-container .chat-form {
+    width: calc(100% - 20px);
+  }
+
+  .chat-container .chat-form .chat-form-input,
+  .chat-container .chat-form .chat-form-submit {
+    font-size: 1.2em;
+  }
+
+  .chat-container .chat-form .chat-form-input {
+    width: calc(100% - 10px);
+    margin-bottom: 5px;
+  }
+
+  .chat-container .chat-form .chat-form-submit {
+    width: calc(70% - 10px);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+  }
+}
+
 /*!
  * Bootstrap v4.5.2 (https://getbootstrap.com/)
  * Copyright 2011-2020 The Bootstrap Authors
