--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Sansita+Swashed&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 
 // Variables
 @import 'variables';
