--- a/resources/sass/user/_chat.scss
+++ b/resources/sass/user/_chat.scss
@@ -20,6 +20,31 @@
         background: white;
         border-radius: 10px;
         margin-bottom: 1vh;
+        overflow-y: auto;
+        background: url("./public/img/backgrounds/background-pattern.jpg");
+        .not-result-div,.result-div{
+            width: calc(90% - 20px);
+            padding: 10px;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            font-size: 1.2em;
+            font-family: "Bebas Neue",sans-serif;
+        }
+        .result-div{
+            font-family: "Oswald",sans-serif;
+            .message-div{
+                width: calc(60% - 20px);
+                padding: 10px;
+                display: block;
+                border-radius: 10px;
+                background: rgba(255,255,255,0.9);
+                margin-bottom: 7px;
+            }
+            .your-div{
+                margin-left: auto;
+            }
+        }
     }
     .chat-form{
         width: calc(90% - 20px);
@@ -100,6 +125,12 @@
     .chat-container{
         width: calc(100% - 20px);
         height: 81vh;
+        .chat-history{
+            .not-result-div,.result-div{
+                width: calc(100% - 10px);
+                padding: 5px;
+            }
+        }
         .chat-form{
             width: calc(100% - 20px);
             .chat-form-input,.chat-form-submit{
