--- a/resources/sass/_user.scss
+++ b/resources/sass/_user.scss
@@ -5,3 +5,5 @@
 @import "user/userPicker";
 @import "user/gallery";
 @import "user/chat";
+@import "user/chatOptions";
+@import "user/chatDynamicColors";
