--- a/resources/sass/user/_chat.scss
+++ b/resources/sass/user/_chat.scss
@@ -1,3 +1,13 @@
+@keyframes heartAnimation{
+    0%{
+        top: 0px;
+    }
+    100%{
+        top: -300px;
+        transform: rotate(-360deg);
+        visibility: hidden;
+    }
+}
 .chat-container{
     width: calc(60% - 20px);
     padding: 10px;
@@ -48,6 +58,68 @@
                 background: none;
                 font-size: 1.4em;
             }
+            .message-clickHeartContainer{
+                position: relative;
+                display: block;
+                animation: heartAnimation 12s;
+                animation-iteration-count: 1;
+                animation-fill-mode: forwards;
+                .times-label{
+                    display: block;
+                    margin-left: calc(50% - 22px);
+                    margin-right: auto;
+                    text-align: center;
+                    margin-top: -80px;
+                    position: relative;
+                    width: 80px;
+                    font-size: 1.9em;
+                    color: white;
+                }
+                .times-label::selection{
+                    background: none;
+                    cursor: none;
+                }
+                .message-clickHeart{
+                    width: 90px;
+                    height: 90px;
+                    position: relative;
+                    text-align: center;
+                    left: calc(50% - 30px);
+                    transform: rotate(45deg);
+                    background: red;
+                    &::before,&::after{
+                        position: absolute;
+                        content: "";
+                        width: 90px;
+                        height: 90px;
+                        background: red;
+                        border-radius: 50%;
+                        z-index: 1;
+                    }
+                    &::before{
+                        left: -45px;
+                    }
+                    &::after{
+                        top: -45px;
+                        left: 0px;
+                    }
+                }
+            }
+            .message-catcher{
+                position: relative;
+                top: -100%;
+                .dumpling-item{
+                    width: 50px;
+                    height: 50px;
+                    font-size: 40px;
+                    text-align: center;
+                    position: relative;
+                    top: -0vh;
+                    left: -100%;
+                    z-index: 5;
+                }
+            }
+            
         }
     }
     .chat-form{
@@ -136,8 +208,10 @@
 @media screen and (max-width: 290px){
     .chat-container{
         width: calc(100% - 20px);
-        height: 81vh;
+        height: 83vh;
         .chat-history{
+            margin-bottom: 0;
+            height: 70%;
             .not-result-div,.result-div{
                 width: calc(100% - 10px);
                 padding: 5px;
